# mtgoxml

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
clickonce/: Cargo.toml  README.md
clickonce/src/: deploymentmanifest.rs  lib.rs
clickonce/src/example/: sample.application
mtgoxml/: Cargo.toml
mtgoxml/src/: lib.rs  main.rs
src/: lib.rs
