[package]
name = "mtgoxml"
version = "0.0.1"
edition = "2018"
authors = ["Max Dymond <maxmakesmagic@gmail.com>"]
description = "Tool to download and format the XML data files from Magic: the Gathering Online"
license = "MIT"
repository = "https://github.com/maxmakesmagic/mtgoxml"
rust-version = "1.56"
keywords = []
categories = []

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.16"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde-xml-rs = "0.5.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

clickonce = { version = "0.0.1", path = "../clickonce" }